[metadata]
name = qu
version = 0.0.1
author = Aaron Ponti
author_email = aaron.ponti@bsse.ethz.ch
url = https://github.com/aarpon/qu
license = Apache-2.0
description = Qu is an attempt to make the full deep learning workflow more interactive by providing a user interface that abstracts all steps from ground truth generation and curation to training and prediction.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
project_urls =
    Bug Tracker = https://github.com/aarpon/qu/issues
    Documentation = https://github.com/aarpon/qu#README.md
    Source Code = https://github.com/aarpon/qu
    User Support = https://github.com/aarpon/qu/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    matplotlib
    napari-plugin-engine>=0.1.4
    numpy
    torch
    torchvision
    torchaudio
    monai[all]==0.5.3
    natsort
    h5py
    sklearn
    opencv-python

[options.entry_points] 
napari.plugin = 
    qu = qu
